--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,6 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - ./backend/postgres_data:/var/lib/postgresql/data
+      - ./postgres_data:/var/lib/postgresql/data
     logging:
       driver: none
